              aliases, and return this same std::optional<HomGroupPresentation>
              instead of a std::unique_ptr<HomGroupPresentation>.  The C++
              syntax should be largely unaffected, and the Python behaviour
              (returns None if there is no homomorphism) should remain the same.
            - Renamed toTeX() to tex().  The old name is kept but deprecated.
            - Other major cleanup and reorganisation under the hood.
        Class Handlebody:
            - Added member and global swap() functions.
        Class HasReturnType:
            - Removed completely.
        Class HilbertCD, HilbertDual, HilbertPrimal:
            - Renamed enumerateHilbertBasis() to enumerate().  The old name
              is removed completely.
            - Can now output to either of Regina's arbitrary precision
              integer types, not only LargeInteger.
            - The main enumeration routine no longer takes an output iterator;
              instead it takes a callable object (e.g., a lambda).
            - The main enumeration now returns each basis element by
              rvalue reference, not by pointer to a newly allocated object.
        Class HomGroupPresentation:
            - Added a move constructor.
            - Added copy assignment and move assignment operators.
            - Added operator * for composition; the old composeWith() is
              now deprecated.
            - Added member and global swap() functions.
            - Renamed range() to codomain(), since this is what it actually is.
            - All functions that used to return a std::unique_ptr<X> now
              just return an X by value (which can then be moved from).
            - Constructors that used to take a domain, range and map(s) by
              reference now take these arguments by value.
            - The evaluate() and invEvaluate() functions now run in linear
              time, not quadratic time, and take their arguments by value.