@@ -85,7 +85,7 @@ void addRational(pybind11::module_& m) {
         .def_readonly_static("undefined", &Rational::undefined)
     ;
     regina::python::add_eq_operators(c);
-    regina::python::add_output_ostream(c, true /* __repr__ */);
+    regina::python::add_output_ostream(c, nullptr /* __repr__ */);
 
     m.def("swap", (void(*)(Rational&, Rational&))(regina::swap));
 
