@@ -83,7 +83,7 @@ void addBoolSet(pybind11::module_& m) {
             return BoolSet(true, true);
         })
     ;
-    regina::python::add_output_ostream(c, true /* __repr__ */);
+    regina::python::add_output_ostream(c, "BoolSet");
     regina::python::add_eq_operators(c);
 
     pybind11::implicitly_convertible<bool, BoolSet>();
